--- a/_projects/2022-02-02-project-2.md
+++ b/_projects/2022-02-02-project-2.md
@@ -1,23 +1,17 @@
 ---
 layout: project
-title: "Project 2"
+title: "Vote for Your Space"
 categories: junk
-author:
-- John Doe
-- Harry Potter
+author: "Yufei"
 meta: "Springfield"
-image: project.png
-description: This is the second project
+image: VoteforYourSpace.jpg
+description: 4.570 Computation Design Lab, Spring 2022
 ---
+## Project Overview
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce bibendum neque eget nunc mattis eu sollicitudin enim tincidunt. Vestibulum lacus tortor, ultricies id dignissim ac, bibendum in velit.
-
-## Some great heading (h2)
-
-Proin convallis mi ac felis pharetra aliquam. Curabitur dignissim accumsan rutrum. In arcu magna, aliquet vel pretium et, molestie et arcu.
-
-Mauris lobortis nulla et felis ullamcorper bibendum. Phasellus et hendrerit mauris. Proin eget nibh a massa vestibulum pretium. Suspendisse eu nisl a ante aliquet bibendum quis a nunc. Praesent varius interdum vehicula. Aenean risus libero, placerat at vestibulum eget, ultricies eu enim. Praesent nulla tortor, malesuada adipiscing adipiscing sollicitudin, adipiscing eget est.
-
+This study examines how gamified assessment can be used as a tool for testing design effectiveness in participatory design for urban renewal.
+Taking a specific historic district renovation design as a test case, the game takes the first-person operation as the perspective, and players walk around the design plan to play an "exploration game": discover planned and designed urban events in the free path, in order to obtain the best possible results. There may be more collectible items for the purpose of consuming physical energy to participate in and obtain collectible items; at the same time, different types of urban events will bring different benefits to the characters: entertainment events that consume gold coins to obtain props, public welfare events that consume gold coins to consume physical strength, and gain physical strength Leisure events that consume gold coins... The purpose is to obtain the player's tendency and preference data by simulating the activity consumption of residents in an urban landscape, and record the player's movement path data in the game, so as to judge the rationality of the design scheme and local issues design planning content.
+<!-- 
 ## Another great heading (h2)
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce bibendum neque eget nunc mattis eu sollicitudin enim tincidunt. Vestibulum lacus tortor, ultricies id dignissim ac, bibendum in velit.
@@ -114,4 +108,4 @@ Title 1 | Title 2 | Title 3 | Title 4
 lorem | lorem ipsum | lorem ipsum dolor | lorem ipsum dolor sit
 lorem ipsum dolor sit amet | lorem ipsum dolor sit amet consectetur | lorem ipsum dolor sit amet | lorem ipsum dolor sit
 lorem ipsum dolor | lorem ipsum | lorem | lorem ipsum
-lorem ipsum dolor | lorem ipsum dolor sit | lorem ipsum dolor sit amet | lorem ipsum dolor sit amet consectetur
+lorem ipsum dolor | lorem ipsum dolor sit | lorem ipsum dolor sit amet | lorem ipsum dolor sit amet consectetur -->
